--- a/app/webroot/templates/my_template/css/print.css
+++ b/app/webroot/templates/my_template/css/print.css
@@ -1,1 +1,65 @@
 @charset "utf-8";
+
+.submenu, #rodape, form, input[type=button], input[type=submit] {
+  display: none;
+}
+
+form, fieldset {
+  page-break-before: avoid;
+  page-break-after:  avoid;
+}
+
+input {
+  border: 0px none #FFFFFF;
+  color: #000000;
+  background: transparent;
+}
+
+select {
+  font-color: #000000; 
+  color: #000000; 
+  border:  0px none; 
+  background-color: #FFFFFF;
+}
+
+table {
+  page-break-before: avoid;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+table tr th {
+	font-weight: bold;
+	text-align: left;
+	padding: 3px;
+}
+
+table caption {
+  font-size: 140%;
+	font-weight: bold;
+	text-align: center;
+	padding: 3px;
+}
+
+table thead th {
+	background-color: #E1EFF6;
+}
+
+table tfoot td {
+  font-size: 70%;
+	text-align: center;
+	padding: 3px;
+  background-color: #E1EFF6;
+}
+
+table tr.hover td {
+	background-color: #E1EFF6;
+}
+
+table tr td, table tr th {
+	padding: 3px;
+	border-bottom: 1px solid #efefef;
+	vertical-align: middle;
+}
